--- a/a.html
+++ b/a.html
@@ -4,15 +4,14 @@
 <head prefix="og: http://ogp.me/ns#">
 <meta charset="utf-8">
 <title>pizza og</title>
-<meta property="og:type" content="product">
-<meta property="og:title" content="Super Papa's">
-<meta property="og:url" content="https://www.papajohnsegypt.com/pizzas.php">
-<meta property="og:image" content="https://www.papajohnsegypt.com/images/Products/Super-Papa.jpg">
-<meta property="og:description" content="Pepperoni, Italian Sausage, Smoked Veal, Onions, Green Pepper, Fresh Mushroom, Black Olives">
-<meta property="product:plural_title" content="Super Papas">
-<meta property="product:price.amount" content="200">
-<meta property="product:price.currency" content="EGP">
-<meta property="fb:app_id" content="3188705211">
+
+<meta property="fb:app_id"          content="1234567890" /> 
+<meta property="og:type"            content="article" /> 
+<meta property="og:url"             content="http://newsblog.org/news/136756249803614" /> 
+<meta property="og:title"           content="Introducing our New Site" /> 
+<meta property="og:image"           content="https://scontent-sea1-1.xx.fbcdn.net/hphotos-xap1/t39.2178-6/851565_496755187057665_544240989_n.jpg" /> 
+<meta property="og:description"    content="http://samples.ogp.me/390580850990722" />
+
 </head>
 <body>
 <p>Example of pizza</p>
