--- a/a.html
+++ b/a.html
@@ -9,7 +9,7 @@
 <meta property="og:type"            content="article" /> 
 <meta property="og:url"             content="http://newsblog.org/news/136756249803614" /> 
 <meta property="og:title"           content="Introducing our New Site" /> 
-<meta property="og:image"           content="https://scontent-sea1-1.xx.fbcdn.net/hphotos-xap1/t39.2178-6/851565_496755187057665_544240989_n.jpg" /> 
+<meta property="og:image"           content="https://www.papajohnsegypt.com/images/Products/Super-Papa.jpg" /> 
 <meta property="og:description"    content="http://samples.ogp.me/390580850990722" />
 
 </head>
