--- a/a.html
+++ b/a.html
@@ -6,7 +6,7 @@
 <title>pizza og</title>
 
 <meta property="fb:app_id"          content="3442828672695043" /> 
-<meta property="og:type"            content="article" /> 
+<meta property="og:type"            content="product" /> 
 <meta property="og:url"             content="http://newsblog.org/news/136756249803614" /> 
 <meta property="og:title"           content="Introducing our New Site" /> 
 <meta property="og:image"           content="https://www.papajohnsegypt.com/images/Products/Super-Papa.jpg" /> 
